# Nidelven-river-adventure

./: .gitignore  CI_SETUP.md  LICENSE  README.md  ROADMAP.md
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: prepare-ci.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
Assets/: UniversalRenderPipelineGlobalSettings.asset  csc.rsp
Assets/Scenes/: MainScene.unity
Assets/Scripts/: README.md
Assets/Scripts/Core/: AudioManager.cs  GameManager.cs  GameQuitter.cs  LocalizationManager.cs  PhotoMode.cs  SaveManager.cs  SteamManager.cs
Assets/Scripts/Environment/: DayNightCycle.cs  KartverketDemImporter.cs  RiverController.cs  RiverParticles.cs  TerrainGenerator.cs  VegetationGenerator.cs  (+2 more)
Assets/Shaders/: PhotoFilter.shader  SimpleWater.shader
Assets/StreamingAssets/: README.md
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
design/: gdd.md
docs/: data-pipeline.md  jira-issues.md
mvp/: .coverage  README.md  UV_README.md  camera.py  dem_downloader.py  headless_renderer.py  kartverket_dem.py  main.py  minimal.py  pyproject.toml  renderer.py  requirements.txt  terrain_mesh.py
mvp/output/: mvp_metadata.json  preview_minimal.html
mvp/src/mvp/: __init__.py  artsdatabanken.py  barentswatch_ais.py  camera.py  dem_downloader.py  dybdedata.py  headless_renderer.py  kartverket_buildings.py  kartverket_dem.py  lakseregisteret.py  main.py  minimal.py  nibio_ar5.py  norgeibilder.py  nvdb_bridges.py  nve_hydapi.py  nve_river.py  qgis_export.py  renderer.py  riksantikvaren.py  river_flow.py  terrain_mesh.py  terrain_textures.py  weather.py  xenocanto.py
mvp/tests/: test_pipeline.py
scripts/: download_dem.py  requirements.txt
(+4 files in other folders)
