[project]
name = "mvp"
version = "0.1.0"
description = "Nidelven River Adventure - MVP terrain previewer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Erling Kristiansen", email = "egkristi@gmail.com"},
]
keywords = ["terrain", "river", "unity", "dem", "nidelven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "rasterio>=1.4.4",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
interactive = [
    "moderngl>=5.8.0",
    "moderngl-window>=2.4.0",
    "PyGLM>=2.7.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
nidelven = "mvp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvp"]

[tool.uv]
package = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N806", "N802", "N803"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "black>=23.0",
    "ruff>=0.1.0",
]
